Added lightz96 portfolio (#275)
* Update PPP

* Update minor typo in DG

* Add EOF

* Update DG and PPP

* Resolve comments

* Resolve comments

* Add EOF

--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -773,28 +773,28 @@ array, preventing invalid values from being added later.
 * **Alternative 2**: Store valid values as `**Enum**`
 - Pros: Validity of values in `**Enum**` form all but assured, there will never be invalid values.
 - Cons: More code and memory required for entire `**Enum**` classes.
-
 // end::clone[]
 
+// tag::undo[]
 === Undo/Redoing undoable commands
-*Undo* command allows the user to revert `**THRIFT**` to its previous state when they have made a mistake. *Redo* command does
-the opposite of *undo* command, useful for when the user wishes to execute the command instead.
+`**UndoCommand**` allows the user to revert `**THRIFT**` to its previous state when they have made a mistake. `**RedoCommand**`  does
+the opposite of `**UndoCommand**`, useful for when users change their minds.
 
 The underlying data structure of the undo and redo feature is implemented in `**PastUndoableCommands**`. It consists of two stacks:
 `UndoStack` and `RedoStack`. It provides the following methods:
 
-* `PastUndoableCommands#addPastCommand(Undoable undoable)` -- Keeps track of the undoable commands.
-* `PastUndoableCommands#getCommandToUndo()` -- Retrieves undoable commands from `UndoStack` for user to perform undo.
-* `PastUndoableCommands#hasUndoable()` -- Checks if there are any commands to perform undo.
-* `PastUndoableCommands#getCommandToRedo()` -- Retrieves undone commands from `RedoStack` for user to perform redo.
-* `PastUndoableCommands#hasRedoCommand()` -- Checks if there are any commands to perform redo.
+* `PastUndoableCommands#addPastCommand(Undoable undoable)` -- Keeps track of the undoable command objects.
+* `PastUndoableCommands#getCommandToUndo()` -- Retrieves undoable command object from `UndoStack` to perform undo.
+* `PastUndoableCommands#hasUndoable()` -- Checks if there is any undoable command object to perform undo.
+* `PastUndoableCommands#getCommandToRedo()` -- Retrieves undone command object from `RedoStack` to perform redo.
+* `PastUndoableCommands#hasRedoCommand()` -- Checks if there is any undone command object to perform redo.
 
 The function wrappers to these methods are `Model#keepTrackCommands(Undoable command)`, `Model#getPreviousUndoableCommand()`, `Model#hasUndoableCommand()`,
 `Model#getUndoneCommand()` and `Model#hasUndoneCommand()` respectively.
 
-NOTE: Undoable commands are *add_expense*, *add_income*, *clone*, *delete*, *tag*, *untag*, *update*.
+NOTE: Undoable commands are `**AddExpenseCommand**`, `**AddIncomeCommand**`, `**CloneCommand**`, `**DeleteCommand**`, `**TagCommand**`, `**UntagCommand**`, `**UpdateCommand**`, `**BudgetCommand**`.
 
-Every undoable command will be stored in the `UndoStack` once it is executed. It will only be stored in `RedoStack` when the user executed
+Every undoable command object will be stored in the `UndoStack` once it is executed. It will only be stored in `RedoStack` when the user executed
 *undo*.
 
 ==== Implementation
@@ -802,50 +802,54 @@ The below scenario illustrates how undo and redo feature works:
 
 Step 1. The application is launched with an empty transaction list. Both `UndoStack` and `RedoStack` are empty upon initializing `**PastUndoableCommands**`.
 
-image::UndoAndRedo/initialUndoRedo.PNG[338, 300]
+image::UndoAndRedo/initialUndoRedo.PNG[, 250]
 
 Step 2. The user executes *add_expense n/Laksa v/4* to add Laksa to the `**TransactionList**`.
 The `**LogicManager**` invokes the method `Model#keepTrackCommands(Undoable undoable)` to keep track of the `**AddExpenseCommand**` object
 that was used to add Laksa. This `**AddExpenseCommand**` object is pushed into `UndoStack`.
 
-image::UndoAndRedo/addExpense.PNG[357, 300]
+image::UndoAndRedo/addExpense.PNG[, 250]
 
-Step 3. The user executes *update i/1 v/3.50* to update the cost of the Laksa to $3.50.
-The `**LogicManager**` calls the method `Model#keepTrackCommands(Undoable undoable)` to keep track of the `**UpdateCommand**` object
-that was used to update the cost of the Laksa. This `**UpdateCommand**` object is pushed into `UndoStack`.
-
-image::UndoAndRedo/updateExpense.PNG[341, 300]
-
-Step 4. The user executes *undo* to revert the cost of the Laksa to $4.00.
-The `**UndoCommand**` invokes the method `Model#getPreviousUndoableCommand()` to retrieve the `**UpdateCommand**` object.
-`**UpdateCommand**` is popped from `UndoStack` and pushed into `RedoStack` before being returned to the callee.
-
-image::UndoAndRedo/undo.PNG[320, 300]
-
-Step 5. The user executes *undo* to remove Laksa from `**TransactionList**`.
+Step 3. The user executes *undo* to remove Laksa from `**TransactionList**`.
 The `**UndoCommand**` invokes the method `Model#getPreviousUndoableCommand()` to retrieve the `**AddExpenseCommand**` object.
 `**AddExpenseCommand**` is popped from `UndoStack` and pushed into `RedoStack` before being returned to the callee.
 
-image::UndoAndRedo/undo2.PNG[326, 300]
+image::UndoAndRedo/undo.PNG[, 250]
 
-The sequence diagram shows how *undo* work for *add_expense* command:
+The sequence diagram shows how *undo* works for `**AddExpenseCommand**`:
 
-.Sequence diagram of how *undo* command is applied at the back-end
+.Sequence diagram of how `**UndoCommand**` is applied at the back-end
 image::UndoAndRedo/UndoAddExpenseSequenceDiagram.png[]
+// end::undo[]
 
-Step 6. The user executes *redo* to add Laksa back to `**TransactionList**`.
+[[GeneralUndoSequence]]
+A general sequence diagram to illustrate how *undo* works for undoable commands:
+
+.General sequence diagram of how `**UndoCommand**` is applied at the back-end for undoable commands
+image::UndoAndRedo/UndoGeneralSequenceDiagram.png[]
+
+// tag::redo[]
+Step 4. The user executes *redo* to add Laksa back to `**TransactionList**`.
 The `**RedoCommand**` invokes the method `Model#getUndoneCommand()` to retrieve the `**AddExpenseCommand**` object.
 `**AddExpenseCommand**` is popped from `RedoStack` and pushed into `UndoStack` before being returned to the callee.
 
-image::UndoAndRedo/redo.PNG[325, 300]
+image::UndoAndRedo/redo.PNG[, 250]
 
-NOTE: All commands stored in `RedoStack` are purged when the user executes another undoable command.
+NOTE: All undoable commands objects stored in `RedoStack` are purged when the user executes another undoable command.
 
-The sequence diagram shows how *redo* work for *add_expense* command:
+The sequence diagram shows how *redo* works for `**AddExpenseCommand**`:
 
-.Sequence diagram of how *redo* command is applied at the back-end
+.Sequence diagram of how `**RedoCommand**` is applied at the back-end
 image::UndoAndRedo/RedoAddExpenseSequenceDiagram.png[]
+// end::redo[]
 
+[[GeneralRedoSequence]]
+A general sequence diagram to illustrate how *redo* works for undoable commands:
+
+.General sequence diagram of how `**RedoCommand**` is applied at the back-end for undoable commands
+image::UndoAndRedo/RedoGeneralSequenceDiagram.png[]
+
+// tag::designconsideration[]
 The following activity diagram shows what happens if the user executes a command:
 
 .Activity diagram of the command execution.
@@ -853,14 +857,32 @@ image::UndoAndRedo/RunCommandActivityDiagrams.png[]
 
 ==== Design considerations
 
+This section shows some of the design considerations taken when implementing the undo and redo features.
+
+===== Aspect: Algorithm used to implements undo and redo features
+
+* Alternative 1 (current choice): Provides different implementations for each command so that the command knows how to undo and redo itself.
+** Pros: Requires less memory usage and provides better performance.
+** Cons: Needs to ensure that the implementation for each command is correct.
+* Alternative 2: Saves the current version of the `**THRIFT**` data. When *undo*/*redo* is executed, `**THRIFT**` will use the previous version of the data.
+** Pros: Reuses the same implementation for the new commands.
+** Cons: Requires a large amount of memory usage.
+
+Alternative 1 was chosen because it requires less memory usage and has better performance compared to alternative 2. For example, undo
+an `**AddExpenseCommand**`, alternative 1 requires a time complexity of O(1), whereas alternative 2 requires a time complexity of O(N).
+
 ===== Aspect: Data structure used to keep track of undoable command
 
-* **Alternative 1 (current choice):** Use two stacks. One stack stores the command to undo while the other stack stores the command to redo.
-** Pros: Easy to implement.
-** Cons: Need to carefully manage the two stacks. For example, you need to pop the command from one stack and push it into another stack.
-* **Alternative 2:** Use an arraylist and a pointer to indicate the next command to undo.
-** Pros: Easy to implement.
-** Cons: Need to carefully manage the pointer. For example, you need to ensure that the pointer stays within the size of an arraylist.
+* Alternative 1 (current choice): Use two stacks. One stack stores the command to undo while the other stack stores the command to redo.
+** Pros: Makes the implementation easy to code.
+** Cons:  Needs to manage the two stacks carefully. For example, you need to pop the command from one stack and push it into another stack.
+* Alternative 2: Use a list and a pointer to indicate the next command to undo.
+** Pros: Makes the implementation easy to code.
+** Cons: Needs to manage the pointer carefully. For example, you need to ensure that the pointer stays within the size of a list.
+
+Alternative 1 was chosen because it provides a higher level of abstraction.
+Alternative 2 is using a list to implement a stack.
+// end::designconsideration[]
 
 // tag::Filtering transactions[]
 === Filtering transactions
