--- a/docs/AboutUs.adoc
+++ b/docs/AboutUs.adoc
@@ -24,7 +24,7 @@ image::lightz96.png[width="150", align="left"]
 {empty}[https://github.com/lightz96[github]] [<<lightz96#, portfolio>>]
 
 Role: User Experience Developer +
-Responsibilities: UI
+Responsibilities: UI and Logic
 
 
 '''
